# PE-Analyzer

./: .gitignore  CHANGELOG.md  README.md  oner.py  pyproject.toml
.github/workflows/: ci.yml
pe_analyzer/: analyzer.py  cli.py  model.py  reports.py
tests/: test_pe_analyzer.py
