[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pe-analyzer"
version = "0.2.0"
description = "Offline PE triage analyzer with JSON, HTML, CSV, and Markdown reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Mono GlaShyiz"}]
dependencies = [
  "pefile>=2023.2.7,<2025",
]

[project.optional-dependencies]
yara = ["yara-python>=4.5,<5"]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
pe-analyzer = "pe_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["pe_analyzer*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
